# Hodge_Khovanov_spectra

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: TU_knots.csv  knotinfo.csv  linkinfo.csv  torus_knots_summary.csv
data/crossings/14/: 14a-hyp.csv  14a-hyp.csv.bz2  14n-hyp.csv  14n-hyp.csv.bz2
databases/: twisted_unknot_research.db
scripts/: kh_database_14.py  kh_database_manager.py  kh_database_manager_Link_PE.py  kh_database_manager_PE.py  twisted_database_creator.py
scripts/crossings/14/: make_14_pd_csv.py
src/spectral_kh/: __init__.py  khovanov_core.py
visualization/: plot_twisted_unknot_gap.py  plot_unified_knots.py  plot_unified_links.py
