[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-kh"
version = "0.1.0"
description = "Spectral Khovanov homology computation and analysis code"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
